// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createSortItem > creates valid attribute sort 1`] = `
{
  "attributeSortItem": {
    "attributeIdentifier": "a_label.product.id.name",
    "direction": "asc",
  },
}
`;

exports[`createSortItem > creates valid measure sort item when no column attributes 1`] = `
{
  "measureSortItem": {
    "direction": "asc",
    "locators": [
      {
        "measureLocatorItem": {
          "measureIdentifier": "m_aangOxLSeztu",
        },
      },
    ],
  },
}
`;

exports[`createSortItem > creates valid measure sort item when single column attribute 1`] = `
{
  "measureSortItem": {
    "direction": "desc",
    "locators": [
      {
        "attributeLocatorItem": {
          "attributeIdentifier": "a_label.owner.region",
          "element": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
        },
      },
      {
        "measureLocatorItem": {
          "measureIdentifier": "m_aangOxLSeztu",
        },
      },
    ],
  },
}
`;

exports[`createSortItem > creates valid measure sort item when two attributes 1`] = `
{
  "measureSortItem": {
    "direction": "desc",
    "locators": [
      {
        "attributeLocatorItem": {
          "attributeIdentifier": "a_label.stage.name.stagename",
          "element": "/gdc/md/referenceworkspace/obj/1091/elements?id=166498",
        },
      },
      {
        "attributeLocatorItem": {
          "attributeIdentifier": "a_label.owner.region",
          "element": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
        },
      },
      {
        "measureLocatorItem": {
          "measureIdentifier": "m_aangOxLSeztu",
        },
      },
    ],
  },
}
`;
